# snake

./: .gitmodules  CMakeLists.txt  LICENSE  README.md  run-cmake.sh  run-tests.sh
src/: CMakeLists.txt  game.c  game.h  main.c  snake.c  snake.h
test/: CMakeLists.txt  Test_Snake.c
test/test_demo/: CMakeLists.txt  test_demo.c
